[gd_scene load_steps=13 format=3 uid="uid://cfv8y08vtqo8u"]

[ext_resource type="Texture2D" uid="uid://c6ltqs8ecbkdd" path="res://art/enemies/boss/Boss-Sheet.png" id="1_1ex25"]
[ext_resource type="Script" uid="uid://c3sq76nqneyvo" path="res://scripts/enemies/boss/boss.gd" id="1_3uc6t"]
[ext_resource type="PackedScene" uid="uid://dp68grnhlgk6k" path="res://scenes/gameplay/damage_effect.tscn" id="3_ub7yk"]
[ext_resource type="AudioStream" uid="uid://dyrqt37rj5c32" path="res://audio/enemies/DeepExhale.wav" id="4_ian0n"]
[ext_resource type="Texture2D" uid="uid://c0bybcolcfrk7" path="res://art/particles/Drop.png" id="5_yye4w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3uc6t"]
atlas = ExtResource("1_1ex25")
region = Rect2(0, 0, 1024, 2560)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub7yk"]
atlas = ExtResource("1_1ex25")
region = Rect2(1024, 0, 1024, 2560)

[sub_resource type="AtlasTexture" id="AtlasTexture_ian0n"]
atlas = ExtResource("1_1ex25")
region = Rect2(2048, 0, 1024, 2560)

[sub_resource type="AtlasTexture" id="AtlasTexture_yye4w"]
atlas = ExtResource("1_1ex25")
region = Rect2(3072, 0, 1024, 2560)

[sub_resource type="SpriteFrames" id="SpriteFrames_rvo7g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uc6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub7yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ian0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yye4w")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3uc6t"]
radius = 83.0
height = 1134.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yye4w"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("4_ian0n")

[node name="Boss" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_3uc6t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_rvo7g")
frame = 3

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ShakeTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 79)
shape = SubResource("CapsuleShape2D_3uc6t")

[node name="DamageEffect" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("3_ub7yk")]
sprite = NodePath("../AnimatedSprite2D")

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_yye4w")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(15, -282)
emitting = false
amount = 12
texture = ExtResource("5_yye4w")
emission_shape = 4
emission_points = PackedVector2Array(-40, 0, 45, 45)
emission_colors = PackedColorArray()
direction = Vector2(0, 0)
spread = 180.0
initial_velocity_max = 100.0
scale_amount_min = 0.3
scale_amount_max = 0.5
color = Color(0.321569, 0.87451, 1, 1)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ShakeTimer" to="." method="_on_shake_timer_timeout"]
